- Module-based folder structure for streamlined and independent project development. - Implemented if-action.

--- a/Knaeckebot/Knaeckebot.csproj
+++ b/Knaeckebot/Knaeckebot.csproj
@@ -9,4 +9,12 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="IfActionControl.xaml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Remove="IfActionControl.xaml" />
+  </ItemGroup>
+
 </Project>
